get parametes of URL

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,20 +2,17 @@
 <h1 style="text-align: center;">Examen de peso</h1>
 {{!-- Feel free to remove this! --}}
 
-
-{{welcome-page}}
-
 <div class="container">
   <div class="row">
     <div class="col">Examen de peso CCI</div>
   </div>
   <div class="row">
-    <div class="col col-lg-4">
-        <img src="/images/skylight.png" alt="">
+    <div class="col col-md-4">
+        <img src="/images/skylight.png" alt="" width="100%">
         Examen
     </div>
-    <div class="col col-lg-8">
-        {{outlet}}        asdasdasdasd s das d as d asd as d as d as dddddddddddddddddddddddddddddddddas das d as da sd a sd as d asd a sd as 
+    <div class="col col-md-8">
+        {{outlet}}
     </div>
   </div>
 </div>
