--- a/app/templates/pesoideal.hbs
+++ b/app/templates/pesoideal.hbs
@@ -1,25 +1,25 @@
 <form action="/pesoideal/resultado" method="GET">
     <div class="form-group">
         <div class="form-check form-check-inline">
-            <input type="radio" id="genero_mujer" name="genero" class="form-check-input">
-            <label class="form-check-label" for="genero">Mujer</label>
+            <input type="radio" id="genero_hombre" name="gender" class="form-check-input" value="1" required>
+            <label class="form-check-label" for="genero_hombre">Hombre</label>
         </div>
         <div class="form-check form-check-inline">
-            <input type="radio" id="genero_hombre" name="genero" class="form-check-input">
-            <label class="form-check-label" for="genero_hombre">Hombre</label>
+            <input type="radio" id="genero_mujer" name="gender" class="form-check-input" value="2" required>
+            <label class="form-check-label" for="genero_mujer">Mujer</label>
         </div>
     </div>
     <div class="form-group">
         <label for="altura">Altura (cm)</label>
-        <input type="number" class="form-control" id="altura" name="altura" placeholder="altura" min="0">
+        <input type="number" class="form-control" id="altura" name="height" placeholder="altura" min="0" required>
     </div>
     <div class="form-group">
-        <label for="edad">Edad</label>
-        <input type="number" class="form-control" id="edad" name="edad" placeholder="edad" min="0">
+        <label for="edad">Edadasds</label>
+        <input type="number" class="form-control" id="edad" name="age" placeholder="edad" min="0" required>
     </div>
     <div class="form-group">
         <label for="peso">Peso (kg)</label>
-        <input type="number" class="form-control" id="peso" name="peso" placeholder="peso" min="0">
+        <input type="number" class="form-control" id="peso" name="weight" placeholder="peso" min="0" required>
     </div>
     <button type="submit" class="btn btn-primary">Calcular</button>
 </form>
