--- a/app/templates/pesoideal/resultado.hbs
+++ b/app/templates/pesoideal/resultado.hbs
@@ -1,10 +1,4 @@
-RESULTADO
-{{altura}}
-...
-{{BMI.pi}}
-{{BMI.pi}}
-{{BMI.piPorc}}
-
+<hr>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -17,32 +11,32 @@ RESULTADO
         <tr>
             <td>PI</td>
             <td>{{BMI.pi}} Kg</td>
-            <td>XXX</td>
+            <td>Peso Ideal</td>
         </tr>
         <tr>
             <td>PIPorc</td>
             <td>{{BMI.piPorc}} %</td>
-            <td>XXX</td>
+            <td>Porcentaje de PI</td>
         </tr>
         <tr>
             <td>IMC</td>
             <td>{{BMI.imc}} Kg/m²</td>
-            <td>XXX</td>
+            <td>Indice de Masa Corporal</td>
         </tr>
         <tr>
             <td>BSA</td>
             <td>{{BMI.bsa}} m²</td>
-            <td>XXX</td>
+            <td>Área de Superficie Corporal</td>
         </tr>
         <tr>
             <td>LBM</td>
             <td>{{BMI.lbm}} Kg</td>
-            <td>XXX</td>
+            <td>Masa Corporal Magra </td>
         </tr>
         <tr>
             <td>TBW</td>
             <td>{{BMI.tbw}} litros</td>
-            <td>XXX</td>
+            <td>Agua Corporal Total</td>
         </tr>
     </tbody>
 </table>
