--- a/app/templates/pesoideal.hbs
+++ b/app/templates/pesoideal.hbs
@@ -14,7 +14,7 @@
         <input type="number" class="form-control" id="altura" name="height" placeholder="altura" min="0" required>
     </div>
     <div class="form-group">
-        <label for="edad">Edadasds</label>
+        <label for="edad">Edad</label>
         <input type="number" class="form-control" id="edad" name="age" placeholder="edad" min="0" required>
     </div>
     <div class="form-group">
@@ -23,4 +23,5 @@
     </div>
     <button type="submit" class="btn btn-primary">Calcular</button>
 </form>
+
 {{outlet}}
